--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&display=swap" rel="stylesheet">
+
+
 <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header class="header">
         <h1>Weather Dashboard.</h1>
       </header>
+
+<main>
+    <div class="container">
+        <div class="container">
+            <div class="row justify-content-start">
+              <div class="col-3">
+    <h2>Search for a City:</h2>
+    <input class="form-control" type="text" placeholder="Raleigh, NC" aria-label="default input example">
+    <div class="d-grid gap-2">
+        <button class="btn" type="button">Search</button>
+        
+      </div>
+  </div>
+</div>
+
+</main>
 
     <script src="assets/javascript.js"></script>
 </body>
