--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Weather Dashboard.</h1>
+        <h1>Weather Dashboard </h1>
       </header>
 
 <main>
