handling form submission

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <div class="row justify-content-start">
               <div class="col-3">
     <h2>Search for a City:</h2>
-    <input class="form-control" type="text" placeholder="Raleigh, NC" aria-label="default input example">
+    <form id="user-form">
+    <input id="city" class="form-control" type="text" placeholder="Raleigh" aria-label="default input example">
     <div class="d-grid gap-2">
-        <button class="btn" type="button">Search</button>
-        
-      </div>
-  </div>
+        <button class="btn" type="submit">Search</button>
+    </form> 
+             </div>
+        </div>
+    </div>
 </div>
 
 </main>
