--- a/index.html
+++ b/index.html
@@ -9,31 +9,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&display=swap" rel="stylesheet">
-
-
 <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    <header class="header">
-        <h1>Weather Dashboard </h1>
-      </header>
 
-<main>
+<main class="d-flex flex-row">
     <div class="container">
-        <div class="container">
-            <div class="row justify-content-start">
-              <div class="col-3">
-    <h2>Search for a City:</h2>
+    <h2 class="text-white">Search for a City:</h2>  
     <form id="user-form">
     <input id="city" class="form-control" type="text" placeholder="Raleigh" aria-label="default input example">
     <div class="d-grid gap-2">
         <button class="btn" type="submit">Search</button>
-    </form> 
-             </div>
+    </form>
         </div>
     </div>
+    <div class="container border border-white border-3">
+        <div class="text-white fs-4">
+        <h2 class="subtitle"> <span id="city-search-term"></span></h2>
+        <div id="weather-container" class="list-group"></div>
+        <p id="name" class="current fw-bolder"></p>
+        <p id="date" class="current"></p>
+        <p id="temp" class="current"></p>
+        <p id="wind" class="current"></p>
+        <p id="humidity" class="current"></p>
+        <p id="uv" class="current"></p>
+      </div>
+    </div>
 </div>
+ <!-- Placehold for the 5-day forecast -->
+ <section class="mt-2 mb-2" id="five-day" style="display:none;">
+    <h3>5-Day Forecast:</h3>
+    <!-- Cards will be dynamically created the the weather day for the 5-day forecast -->
+    <div class="card-deck">
+    </div>
+
+   
+
 
 </main>
 
