--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/style.css">
 
-<main class="d-flex flex-row">
+<main>
+    <div class="d-flex flex-row">
     <div class="container">
     <h2 class="text-white">Search for a City:</h2>  
     <form id="user-form">
@@ -23,11 +24,12 @@
     </form>
         </div>
     </div>
-    <div class="container border border-white border-3">
+    <div class="container">
         <div class="text-white fs-4">
         <h2 class="subtitle"> <span id="city-search-term"></span></h2>
         <div id="weather-container" class="list-group"></div>
         <p id="name" class="current fw-bolder"></p>
+        <div class="current-img"></div>
         <p id="date" class="current"></p>
         <p id="temp" class="current"></p>
         <p id="wind" class="current"></p>
@@ -36,18 +38,13 @@
       </div>
     </div>
 </div>
- <!-- Placehold for the 5-day forecast -->
- <section class="mt-2 mb-2" id="five-day" style="display:none;">
-    <h3>5-Day Forecast:</h3>
-    <!-- Cards will be dynamically created the the weather day for the 5-day forecast -->
-    <div class="card-deck">
-    </div>
 
-   
+<div class="container-forecast">
 
-
+      </div>
 </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="assets/javascript.js"></script>
 </body>
 </html>
