--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="text-white fs-4">
+        <div class="text-white fs-5">
         <h2 class="subtitle"> <span id="city-search-term"></span></h2>
         <div id="weather-container" class="list-group"></div>
-        <p id="name" class="current fw-bolder"></p>
+        <p id="name" class="current fw-bolder fs-2"></p>
+        <div class="today-date"></div>
         <div class="current-img"></div>
         <p id="date" class="current"></p>
         <p id="temp" class="current"></p>
