--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <main>
     <div class="d-flex flex-row">
-    <div class="container">
-    <h2 class="text-white">Search for a City:</h2>  
+    <div class="container col-3">
+    <h2 class="text-warning">Search for a City:</h2>  
     <form id="user-form">
     <input id="city" class="form-control" type="text" placeholder="Raleigh" aria-label="default input example">
     <div class="d-grid gap-2">
@@ -25,6 +25,7 @@
         </div>
     </div>
     <div class="container">
+        <div class="weather-background">
         <div class="text-white fs-5">
         <h2 class="subtitle"> <span id="city-search-term"></span></h2>
         <div id="weather-container" class="list-group"></div>
@@ -36,13 +37,20 @@
         <p id="wind" class="current"></p>
         <p id="humidity" class="current"></p>
         <p id="uv" class="current"></p>
+        </div>
       </div>
     </div>
 </div>
 
-<div class="container-forecast">
+<div class="container d-flex flex-row">
+    <div class="cardContainer">
 
-      </div>
+    </div>
+ </div>
+
+   
+
+    
 </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
