--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
     <form id="user-form">
     <input id="city" class="form-control" type="text" placeholder="Raleigh" aria-label="default input example">
     <div class="d-grid gap-2">
-        <button class="btn" type="submit">Search</button>
+        <button id="button" class="btn" type="submit">Search</button>
     </form>
         </div>
     </div>
+
+    
     <div class="container">
-        <div class="weather-background">
+        <div class="weather-now">
         <div class="text-white fs-5">
         <h2 class="subtitle"> <span id="city-search-term"></span></h2>
         <div id="weather-container" class="list-group"></div>
         <p id="name" class="current fw-bolder fs-2"></p>
         <div class="today-date"></div>
-        <div class="current-img"></div>
+        <div id="current-img" class="current-img"></div>
         <p id="date" class="current"></p>
         <p id="temp" class="current"></p>
         <p id="wind" class="current"></p>
@@ -42,8 +44,15 @@
     </div>
 </div>
 
+<div class="container">
+    <h2 class="text-white fs-5">Recent Searches:</h2>
+    <div id="searched-cities" class="searched-cities">
+        
+    </div>
+</div>
+
 <div class="container d-flex flex-row">
-    <div class="cardContainer">
+    <div id="cardContainer" class="cardContainer">
 
     </div>
  </div>
