styling the UVI and adding a header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <link rel="stylesheet" href="assets/style.css">
 
 <main>
+
+    <h1 class="header">Weather Dashboard</h1>
     <div class="d-flex flex-row">
     <div class="container-search col-3">
     <h2 class="text-warning">Search for a City:</h2>  
