--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <main>
 
     <h1 class="header">Weather Dashboard</h1>
+
+    <!--search bar-->
     <div class="d-flex flex-row">
     <div class="container-search col-3">
     <h2 class="text-warning">Search for a City:</h2>  
@@ -30,7 +32,7 @@
         </div>
     </div>
 
-    
+    <!--current weather container-->
     <div class="container">
         <div class="weather-now">
         <div class="text-white fs-5">
@@ -49,6 +51,7 @@
     </div>
 </div>
 
+<!--recent searches container-->
 <div class="container">
     <div class="recent">
     <h2 class="text-white fs-5">Recent Searches:</h2>
@@ -57,6 +60,7 @@
     </div>
 </div>
 
+<!--forecast container-->
 <p id="fiveDay"></p>
 <div class="container d-flex flex-row">
     <div id="cardContainer" class="cardContainer">
